# prometheus-nexus

./: .gitignore  DEV_ROADMAP.md  Dockerfile  MECHANISM_INVENTORY_LIFEPY.md  Makefile  PLAN_skill_distillation.md  README.md  docker-compose.yml  explorer_state.json.bak  fix_guardrail_null.py  omega_state.json.bak  pyproject.toml  register_tasks.ps1
archive/: distributed_knowledge_graph.py  evo_state.json.bak
docs/: LEARN_SINGLE_INGEST_UPGRADE.md  T2_T4_EVOLUTION_UPGRADE.md  agent_integration.md  isolated_files_analysis.md  multi_type_kb_seven_pipe_evolution.md  p7_handbook_behavior_localization.md  pipeline_audit_2026-06-30.md  ultra_hermes_integration_architecture.md  v2_host_agnostic_evolution.md
examples/: autogpt_agent.py  claude_code_agent.py
scripts/: _scan_silent_except.py  audit_deadcode.py  audit_double_exec.py  audit_effect_route.py  audit_hollow.py  audit_island.py  audit_nexus_cns.py  nexus_run_monitor.py  ultra_keepalive.py  ultra_longrun.py  ultra_monitor_2h.py  ultra_monitor_fine.py
tests/: conftest.py  eval_t2_t4_regression.py  test_api_server.py  test_autonomic_regulator_score_mask.py  test_autonomic_regulator_trend.py  test_bug_regression.py  test_capability_inbox_pending_silent.py  test_cerebral_cortex_zeromask_fix.py  test_compliance_scorer.py  test_consolidation.py  test_consolidation_engine_fix.py  test_constraint_drift.py  test_crash_recovery_crash_safety.py  test_crash_restore_crash_safety.py  test_dag_executor_escalation_guard.py  test_data_exfiltration.py  test_deadcode_mechanisms_wired.py  test_deadcode_wiring_revival.py  (+126 more)
(+290 files in other folders)
